Set a max-width value for links with long text and prevent it's text from overflowing the element padding

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -4,6 +4,7 @@ aside.menu {
 	flex-direction: column;
 	height: 100%;
 	min-width: 200px;
+	max-width: 275px;
 	overflow-y: auto;
 	z-index: 1;
 
@@ -49,11 +50,18 @@ aside.menu {
 			margin: 0 15px 0 12px;
 		}
 
-		.nav-item a {
-			align-items: center;
-			display: flex;
-			padding: 0.8em 0.75em;
-			white-space: nowrap;
+		.nav-item {
+			a {
+				align-items: center;
+				display: flex;
+				padding: 0.8em 0.75em;
+				white-space: nowrap;
+
+				span {
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+			}
 		}
 	}
 
@@ -81,7 +89,7 @@ aside.menu {
 		&.child-pages {
 			a {
 				padding-left: 50px;
-				padding-right: 30px;
+				padding-right: 20px;
 			}
 		}
 	}
